# Prism-Earth

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Prism_Earth_SRS_v1.0.docx  README.md  docker-compose.yml  push_to_github.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: ask.py  fetch.py  health.py  meta.py  router.py
backend/app/ask/: __init__.py  pipeline.py
backend/app/citations/: __init__.py  engine.py
backend/app/config/: loader.py
backend/app/connectors/: __init__.py  _spatial.py  administrative.py  base.py  built_environment.py  cadastral.py  climate.py  infrastructure.py  land_cover.py  natural_hazard.py  registry.py  terrain.py  utilities.py
backend/app/core/: config.py  database.py  errors.py  logging.py  redis.py
backend/app/datasets/: __init__.py  registry.py
backend/app/fetchers/: __init__.py  orchestrator.py
backend/app/gee/: __init__.py  auth.py  client.py  datasets.py
backend/app/llm/: __init__.py  client.py
backend/app/metadata/: __init__.py  catalog.py  enums.py  models.py  seed_fields.py  seed_layers.py  seed_presets.py  state_registry.py  validator.py
backend/app/middleware/: correlation.py
backend/app/models/: __init__.py  base.py  registry.py  spatial.py
backend/app/planners/: __init__.py  planner.py  prompts.py  schema.py
backend/app/provenance/: __init__.py  generator.py
backend/app/schemas/: ask.py  common.py  fetch.py  metadata.py  spatial.py
backend/app/services/: state_detection.py
backend/app/synthesizers/: __init__.py  synthesizer.py
backend/app/tests/: _ask_fakes.py  _fetch_fakes.py  conftest.py  test_ask_api.py  test_catalog_validator.py  test_citation_engine.py  test_connectors.py  test_dataset_registry.py  test_fetch_api.py  test_fetch_orchestrator.py  test_gee_client.py  test_health.py  test_llm_client.py  test_metadata_catalog.py  test_phase4_connectors.py  test_phase4_orchestrator.py  test_planner.py  test_provenance.py  test_spatial_models.py  test_state_detection.py  test_state_registry.py  test_synthesizer.py
backend/app/utils/: time.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_extensions_and_schemas.py  0002_metadata_registry.py  0003_admin_boundaries.py  0004_spatial_layers.py
backend/requirements/: base.txt  dev.txt
configs/: datasets.yaml  india.yaml  states.yaml  telangana.yaml
datasets/: README.md
docker/: README.md
docs/: google_earth_engine_setup.md  local_postgis_setup.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
scripts/: fetch_telangana_admin.py  fetch_telangana_osm.py  gee_smoke_test.py  (+2 more)
(+26 files in other folders)
