[project]
name = "prism-earth-backend"
version = "0.1.0"
description = "Prism Earth backend — deterministic, citation-backed geospatial intelligence (SRS §9, §11)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "sqlalchemy[asyncio]>=2.0.35,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "pyyaml>=6.0,<7.0",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "black>=24.10",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]

# This is a runnable application, not a distributable package — uv should manage
# the environment without trying to build/install the project itself.
[tool.uv]
package = false

# --------------------------------------------------------------------------- #
# Ruff (lint + import sorting)                                                 #
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app"]
extend-exclude = ["migrations"]

[tool.ruff.lint]
# Pragmatic Phase 0 set: pycodestyle errors, pyflakes, import sorting,
# pyupgrade, and bugbear. Security scanning (flake8-bandit) is added in
# Phase 8 (SRS §29) to avoid false positives on config defaults.
select = ["E", "F", "I", "UP", "B"]

# --------------------------------------------------------------------------- #
# Black (formatting)                                                           #
# --------------------------------------------------------------------------- #
[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "migrations"

# --------------------------------------------------------------------------- #
# mypy (type checking)                                                         #
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
ignore_missing_imports = true
exclude = ["migrations/", "app/tests/"]

# --------------------------------------------------------------------------- #
# pytest                                                                       #
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
addopts = "-q"
